# water-break

./: Cargo.toml  LICENSE  README.md
src/: main.rs
ui/: appwindow.slint
