[package]
name = "water-break"
version = "0.1.0"
authors = ["Kanak Shilledar <kanakshilledar111@protonmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4.10.0"
slint = "1.3"

[build-dependencies]
slint-build = "1.3"